<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_activity"
        android:orderInCategory="1"
        android:title="@string/item_main_activity"
        android:showAsAction="always" />
    <item
        android:id="@+id/activity_a"
        android:orderInCategory="2"
        android:title="@string/item_activity_a"
        android:showAsAction="never" />
    <item
        android:id="@+id/activity_b"
        android:orderInCategory="3"
        android:title="@string/item_activity_b"
        android:showAsAction="never" />
    <item
        android:id="@+id/activity_c"
        android:orderInCategory="4"
        android:title="@string/item_activity_c"
        android:showAsAction="never" />



</menu>