<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonGoToAA"
        android:id="@+id/button_a_a"
        android:theme="@style/MyButtonSmall"
        android:layout_gravity="center_horizontal"
        android:onClick="goToActivityA" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonGoToAB"
        android:id="@+id/button_a_b"
        android:theme="@style/MyButtonNormal"
        android:layout_gravity="center_horizontal"
        android:onClick="goToActivityB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonGoToMA"
        android:id="@+id/button_ma"
        android:theme="@style/MyButtonBig"
        android:layout_gravity="center_horizontal"
        android:onClick="goToMainActivity" />
</LinearLayout>